--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,21 @@
         </ul>
     </header>
 
-    {% block content %}
-    {% endblock %}
+    <!--Section for the messages-->
+    <section>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <h4 class=" light-green lighten-5 center-align">{{message}}</h4>
+                {% endfor %}
+            {% endif%}
+        {% endwith %}
+    </section>
+
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
