--- a/templates/register.html
+++ b/templates/register.html
@@ -9,21 +9,25 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-utensils amber-text text-lighten-1 prefix"></i>
-                    <input id="username" name="username" type="text" class="validate">
+                    <input id="username" minlength="5" maxlength="15" name="username" type="text" class="validate"
+                        pattern="^[a-zA-Z0-9]{5,20}$" title="Username has to be between 5 - 20 characters long"
+                        required>
                     <label for="username">Cook Name</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-key amber-text text-lighten-1 prefix"></i>
-                    <input id="password" name="password" type="password" class="validate">
+                    <input id="password" minlength="5" name="password" type="password" class="validate"
+                        pattern="^[a-zA-Z0-9]{6,}$" title="Must contain at least 6 or more characters" required>
                     <label for="password">Password</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-key amber-text text-lighten-1 prefix"></i>
-                    <input id="repeat-password" name="repeat-password" type="password" class="validate">
+                    <input id="repeat-password" minlength="5" name="repeat-password" type="password" class="validate"
+                        pattern="^[a-zA-Z0-9]{6,}$" title="Must contain at least 6 or more characters" required>
                     <label for="repeat-password">Repeat Password</label>
                 </div>
             </div>
@@ -31,7 +35,7 @@
                 <button type="submit" class=" col s12 btn-large light-green">
                     Create Account
                 </button>
-            </div>      
+            </div>
     </form>
 </div>
 <div class="row">
