--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <li><a href="{{ url_for('get_latest') }}">Home</a></li>
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                 </ul>
             </div>
@@ -37,7 +37,7 @@
             <li><a href="{{ url_for('get_latest') }}">Home</a></li>
             <li><a href="#">Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
         </ul>
     </header>
