--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Joining CookBook community</h3>
+<h3 class="center-align">Log In</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register')}}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login')}}">
         <div class="card-panel">
             <div class="row">
                 <div class="input-field col s12">
@@ -24,16 +24,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-key amber-text text-lighten-1 prefix"></i>
-                    <input id="repeat-password" minlength="5" name="repeat-password" type="password" class="validate"
-                        pattern="^[a-zA-Z0-9]{6,}$" title="Must contain at least 6 or more characters" required>
-                    <label for="repeat-password">Repeat Password</label>
-                </div>
-            </div>
-            <div class="row">
                 <button type="submit" class=" col s12 btn-large light-green">
-                    Create Account
+                    Log In
                 </button>
             </div>
     </form>
@@ -41,7 +33,7 @@
 <div class="row">
     <div class="col s12">
         <p class="center-align">
-            Already Have Account? <a href="{{ url_for('login')}}" class="grey-text text-darken-4">Log In</a>
+            Don't Have Account? <a href="{{ url_for('register')}}" class="grey-text text-darken-4">Create Account</a>
         </p>
     </div>
 </div>
