--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">{{username.capitalize()}}</a></li>
                     <li><a href="#">Log Out</a></li>
                 </ul>
             </div>
@@ -38,6 +39,7 @@
             <li><a href="#">Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">{{username.capitalize()}}</a></li>
             <li><a href="#">Log Out</a></li>
         </ul>
     </header>
