Add horizontal card for recipes page

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_latest') }}">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
+                    <li><a href="{{ url_for('get_recipe') }}">Recipes</a></li>
                     {% if session.user %}
                         <li><a href="#">Add Recipe</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
@@ -39,7 +39,7 @@
         <ul class="sidenav" id="mobile-demo">
             <h4 class="center-align grey-text text-darken-4">CookBook</h4>
             <li><a href="{{ url_for('get_latest') }}">Home</a></li>
-            <li><a href="#">Recipes</a></li>
+            <li><a href="{{ url_for('get_recipe') }}">Recipes</a></li>
             {% if session.user %}
                 <li><a href="#">Add Recipe</a></li>
                 <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
