--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,10 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <div class="col s12 m7">
+        <h2 class="header">Horizontal Card</h2>
+        <div class="card horizontal">
+            <div class="card-image">
+                <img src="https://lorempixel.com/100/190/nature/6">
+            </div>
+            <div class="card-stacked">
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% for recipe in recipes %}
-        {{recipe.recipe_name}}<br />
-        {{recipe.recipe_description}}<br />
-        {{recipe.time}}<br />
+    {{recipe.recipe_name}}<br />
+    {{recipe.recipe_description}}<br />
+    {{recipe.time}}<br />
     {% endfor %}
 
 {% endblock %}
