Add statement in main_page to show registration button only for guest users

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,19 +3,18 @@
 
     <h1>Main Page of CookBook</h1>
     <div class="row">
-        {% if session.user %}
-            <img class="col s12 m4"
-                src="https://images.unsplash.com/photo-1546552580-9427ccb15af4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80"
+        <img class="col s12 m4"
+            src="https://images.unsplash.com/photo-1546552580-9427ccb15af4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80"
                 alt="hero image example">
-            <p class="col s12 m8">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-                a type specimen book.<br />
-        {% else %}            
+        <p class="col s12 m8">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+            a type specimen book.<br />
+        {% if not session.user %}
             Want to add your own recipe join our community. <br />
             <button><a href="{{ url_for('register')}}">Create CookBook Account</a></button>
         {% endif %}
-            </p>
+        </p>
     </div>
     {% for recipe in recipes %}
     {{recipe.recipe_name}}<br />
