--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,7 +15,7 @@
                         </div>
                         <div class="card-content card-footer">
                             <i class="far fa-clock"></i>
-                            <strong>{{recipe.time}}</strong>&emsp;
+                            <strong>{{recipe.prep_time + recipe.cook_time}}</strong>&emsp;
                             <i class="fas fa-utensil-spoon"></i>
                             <strong>{{recipe.category_name}}</strong>
 
