--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,19 +3,31 @@
 
     <h2 class="header">Add Your Recipe here</h2>
 
-    <div class="row">
-        <form class="col s12">
+    <div class="row card-panel">
+        <form class="col s12" method="POST" action="">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-book amber-text text-lighten-1 prefix"></i>
+                    <select id="category_name" name="category_name" class="validate" required>
+                        <option value="" disabled selected>Choose recipe category</option>
+                        {% for category in categories %}
+                            <option value="{{category.category_name}}">{{category.category_name}}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Recipe category</label>
+                </div>
+            </div>
             <div class="row">
                 <div class="input-field col s12 l10">
                     <i class="fas fa-utensils amber-text text-lighten-1 prefix"></i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12 l10">
                     <i class="fas fa-scroll amber-text text-lighten-1 prefix"></i>
-                    <textarea id="recipe_description" name="recipe_description" class="materialize-textarea"></textarea>
+                    <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" required></textarea>
                     <label for="recipe_description">Short Description Of A Recipe</label>
                 </div>
             </div>
@@ -24,7 +36,7 @@
                 <div class="input-field col s12 l10">
                     <i class="fas fa-list-alt amber-text text-lighten-1 prefix"></i>
                     <input id="ingrediants" name="ingrediants" type="text" class="validate">
-                    <label for="ingrediants">Ingrediant</label>
+                    <label for="ingrediants">Add ingrediant one at a time in your ingrediant list</label>
                 </div>
                 <div class="input-field col s12 l10 add_ingrediant center-align">
                     <input type="button" class="btn add_list_item" value="Add Ingrediant"></button>
@@ -41,12 +53,12 @@
                 <h4>Method</h4>
                 <div class="input-field col s12 l10">
                     <i class="fas fa-list-ol amber-text text-lighten-1 prefix"></i>
-                    <textarea id="step_one" name="step_one" class="materialize-textarea validate"></textarea>
+                    <textarea id="step_one" name="step_one" class="materialize-textarea validate" required></textarea>
                     <label for="step_one">Step One</label>
                 </div>
                 <div class="input-field col s12 l10">
                     <i class="prefix"></i>
-                    <textarea id="step_two" name="step_two" class="materialize-textarea validate"></textarea>
+                    <textarea id="step_two" name="step_two" class="materialize-textarea validate" required></textarea>
                     <label for="step_two">Step Two</label>
                 </div>
                 <div class="input-field col s12 l10">
@@ -58,12 +70,12 @@
             <div class="row">
                 <div class="input-field col s12 l5">
                     <i class="fas fa-clock amber-text text-lighten-1 prefix"></i>
-                    <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate">
+                    <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate" required>
                     <label for="prep_time">Preparation Time / Minutes</label>
                 </div>
                 <div class="input-field col s12 l5">
                     <i class="prefix"></i>
-                    <input id="cook_time" name="cook_time" type="number" min="1" max="600" class="validate">
+                    <input id="cook_time" name="cook_time" type="number" min="1" max="600" class="validate" required>
                     <label for="cook_time">Cook Time / Minutes</label>
                 </div>
             </div>
@@ -71,7 +83,7 @@
                 <div class="file-field input-field col s12 l10">
                     <div class="btn right">
                         <span>Upload Image</span>
-                        <input type="file">
+                        <input type="file" name="recipe_image" required>
                     </div>
                     <div class="file-path-wrapper">
                         <i class="fas fa-image amber-text text-lighten-1 prefix"></i>
