--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,7 +4,7 @@
     <h2 class="header">Add Your Recipe here</h2>
 
     <div class="row card-panel">
-        <form class="col s12" method="POST" action="">
+        <form class="" method="POST" action="{{ url_for('add_recipe')}}" enctype="multipart/form-data">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-book amber-text text-lighten-1 prefix"></i>
@@ -18,72 +18,67 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 l10">
+                <div class="input-field col s12">
                     <i class="fas fa-utensils amber-text text-lighten-1 prefix"></i>
                     <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 l10">
+                <div class="input-field col s12">
                     <i class="fas fa-scroll amber-text text-lighten-1 prefix"></i>
                     <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" required></textarea>
                     <label for="recipe_description">Short Description Of A Recipe</label>
                 </div>
             </div>
             <div class="row">
-                <h4>Ingrediants</h4>
-                <div class="input-field col s12 l10">
+                <h4>Ingredients</h4>
+                <div class="ingr_input_cont input-field col s12 l10">
                     <i class="fas fa-list-alt amber-text text-lighten-1 prefix"></i>
-                    <input id="ingrediants" name="ingrediants" type="text" class="validate">
-                    <label for="ingrediants">Add ingrediant one at a time in your ingrediant list</label>
+                    <input id="ingredients" name="ingredients" type="text" class="validate">
+                    <label for="ingredients">Add ingredient</label>
                 </div>
-                <div class="input-field col s12 l10 add_ingrediant center-align">
-                    <input type="button" class="btn add_list_item" value="Add Ingrediant"></button>
-                    <input type="button" class="btn remove_list_item" value="Remove Last Ingrediant"></button>
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            <span class="card-title">Ingrediant List</span>
-                            <ul class="ingr_list"></ul>
-                        </div>
-                    </div>
+                <div class="input-field col s12 l2 right">
+                    <button class="btn add_list_item waves-effect waves-light" type="button">
+                        Add Ingredient
+                    </button>
                 </div>
             </div>
             <div class="row">
                 <h4>Method</h4>
-                <div class="input-field col s12 l10">
+                <div class="input-field col s12">
                     <i class="fas fa-list-ol amber-text text-lighten-1 prefix"></i>
-                    <textarea id="step_one" name="step_one" class="materialize-textarea validate" required></textarea>
+                    <textarea id="step_one" name="methods" class="materialize-textarea validate" required></textarea>
                     <label for="step_one">Step One</label>
                 </div>
-                <div class="input-field col s12 l10">
+                <div class="input-field col s12">
                     <i class="prefix"></i>
-                    <textarea id="step_two" name="step_two" class="materialize-textarea validate" required></textarea>
+                    <textarea id="step_two" name="methods" class="materialize-textarea validate" required></textarea>
                     <label for="step_two">Step Two</label>
                 </div>
-                <div class="input-field col s12 l10">
+                <div class="input-field col s12">
                     <i class="prefix"></i>
-                    <textarea id="step_three" name="step_three" class="materialize-textarea validate"></textarea>
+                    <textarea id="step_three" name="methods" class="materialize-textarea validate"></textarea>
                     <label for="step_three">Step Three</label>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 l5">
+                <div class="input-field col s12 l6">
                     <i class="fas fa-clock amber-text text-lighten-1 prefix"></i>
                     <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate" required>
                     <label for="prep_time">Preparation Time / Minutes</label>
                 </div>
-                <div class="input-field col s12 l5">
+                <div class="input-field col s12 l6">
                     <i class="prefix"></i>
                     <input id="cook_time" name="cook_time" type="number" min="1" max="600" class="validate" required>
                     <label for="cook_time">Cook Time / Minutes</label>
                 </div>
             </div>
             <div class="row">
-                <div class="file-field input-field col s12 l10">
+                <div class="file-field input-field col s12">
                     <div class="btn right">
                         <span>Upload Image</span>
-                        <input type="file" name="recipe_image" required>
+                        <input type="file" name="recipe_image">
                     </div>
                     <div class="file-path-wrapper">
                         <i class="fas fa-image amber-text text-lighten-1 prefix"></i>
@@ -91,14 +86,14 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col s12 l10 center-align">
+                <button class="btn-large waves-effect waves-light" type="submit">
+                    Add Recipe <i class="fas fa-file right"></i>
+                </button>
+            </div>
+            </div>
         </form>
-        <div class="row">
-            <div class="col s12 l10">
-        <button class="btn-large waves-effect waves-light center" type="submit" name="action">Add Recipe
-            <i class="fas fa-file right"></i>
-        </button>
-        </div>
-        </div>
     </div>
 
 
