--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,9 @@
             </div>
         </div>
     </div>
+    <div>
+        <h4>Your recipes</h4>
+    </div>
     {% for recipe in recipes %}
     <div class="card horizontal">
         <div class="row rm-bottom-gap valign-wrapper">
@@ -34,7 +37,7 @@
                         <i class="fas fa-user"></i>
                         <em> by: {{recipe.recipe_by}}</em>
                         <div class="center-align">
-                            <a href="" class="waves-effect waves-light btn-small ">Edit Recipe</a>
+                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn-small ">Edit Recipe</a>
                             <a href="" class="waves-effect waves-light btn-small ">Delete Recipe</a>
                         </div>
                     </div>
