Added upload folder for images uploaded for recipes by users

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,10 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_latest') }}">Home</a></li>
                     <li><a href="{{ url_for('get_recipe') }}">Recipes</a></li>
+                    <li><a href="{{ url_for('test_images', filename=filename) }}">Test Image</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                        <li><a href="{{ url_for('add_test_image') }}">Add Test Image</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">{{session.user.capitalize()}}</a></li>
                         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
