--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,7 +9,10 @@
                     <div class="card-stacked">
                         <div class="card-action">
                             <div class="image-container small-screen center-align">
-                                <img class="responsive-img" src="{{ url_for('file', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}"><br />
+                                <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}"><br />
+                                {% if recipe.recipe_image not in recipe_images %}
+                                <p>Nera tokio paveiksliuko</p>
+                                {% endif %}
                             </div>
                             <p class="left">
                                 <strong>{{recipe.recipe_name}}</strong>
@@ -29,7 +32,10 @@
                     </div>
                 </div>
                     <div class="image-container-medium col m3 small-screen center-align">
-                        <img class="responsive-img" src="{{ url_for('file', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}">
+                        <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}">
+                        {% if recipe.recipe_image not in recipe_images %}
+                            <p>Nera tokio paveiksliuko</p>
+                        {% endif %}
                     </div>
             </div>
         </div>  
