--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -16,11 +16,65 @@
         {% endif %}
         </p>
     </div>
-    {% for recipe in recipes %}
-    {{recipe.recipe_name}}<br />
-    {{recipe.recipe_description}}<br />
-    {{recipe.time}}<br />
-    {% endfor %}
-
+    <div class="row valign-wrapper">
+        <div class="col s6">
+            <h2 class="left-align">Latest recipies</h2>
+        </div>
+        <div class="col s6 right-align">
+            <button>More Recipies</button>
+        </div>
+    </div>
+    <div class="row">
+        {% for recipe in recipes %}
+            <div class="col s6 m3">
+                <div class="card small responsive-size hoverable">
+                    <div class="card-image">
+                        <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}">
+                    </div>
+                    <div class="card-content">
+                        <span class="truncate">{{recipe.recipe_name}}</span>
+                        <strong><p class="truncate">{{recipe.recipe_add_time}}</p></strong>
+                        <span>
+                            <i class="far fa-clock"></i>
+                            <strong>{{recipe.prep_time + recipe.cook_time}}</strong>&emsp;
+                        </span>
+                        <span>
+                            <i class="fas fa-user"></i>
+                            <em> by: {{recipe.recipe_by}}</em>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="row valign-wrapper">
+        <div class="col s6">
+            <h2 class="left-align"> Top Kitchen Gadgets</h2>
+        </div>
+        <div class="col s6 right-align">
+            <button>More Recipies</button>
+        </div>
+    </div>
+    <div class="row">
+            <div class="col s6 m3">
+                <div class="card small responsive-size hoverable">
+                    <div class="card-image">
+                        <img class="responsive-img" src="#">
+                    </div>
+                    <div class="card-content">
+                        <span class="truncate">tool name</span>
+                        <strong><p class="truncate">description</p></strong>
+                        <span>
+                            <i class="far fa-clock"></i>
+                            <strong>pricer</strong>&emsp;
+                        </span>
+                        <span>
+                            <i class="fas fa-user"></i>
+                            <em> where to buy</em>
+                        </span>
+                    </div>
+                </div>
+            </div>
+    </div>
 
 {% endblock %}
