--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,43 @@
         {% block content %}
         {% endblock %}
     </main>
+    {% if not session.user %}
+        <div class="footer-copyright bottom-registration valign-wrapper deep-orange lighten-4">
+            <div class="container">
+                <strong>Join Us Now By Creating Your Account</strong>
+                <button class="right" >Join Us</button>
+            </div>
+        </div>
+    {% endif %}
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l4 s12">
+                    <h5 class="white-text">About Us</h5>
+                    <p class="grey-text text-lighten-4">Content to present the page</p>
+                </div>
+                <div class="col l4 s6">
+                    <h5 class="white-text">Need Help?</h5>
+                    <p class="grey-text text-lighten-4">Contact Us on phone or email</p>
+                </div>
+                <div class="col l4 s6">
+                    <h5 class="white-text">Follow Us</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
