--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -35,8 +35,8 @@
                 <h4>Ingredients</h4>
                 <div class="ingr_input_cont input-field col s12 l10">
                     <i class="fas fa-list-alt amber-text text-lighten-1 prefix"></i>
-                    <input id="ingredients" name="ingredients" type="text" class="validate">
-                    <label for="ingredients">Add ingredient</label>
+                    <input id="ingredients_add" name="ingredients_add" type="text" class="validate">
+                    <label for="ingredients_add">Add ingredient</label>
                 </div>
                 <div class="input-field col s12 l2 right">
                     <button class="btn add_list_item waves-effect waves-light" type="button">
