--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -88,9 +88,12 @@
             </div>
             <div class="row">
                 <div class="col s12 l10 center-align">
-                <button class="btn-large waves-effect waves-light" type="submit">
-                    Add Recipe <i class="fas fa-file right"></i>
-                </button>
+                    <a href="{{ url_for('get_recipe') }}" class="btn-large waves-effect waves-light">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
+                    <button class="btn-large waves-effect waves-light" type="submit">
+                        Add Recipe <i class="fas fa-file right"></i>
+                    </button>
             </div>
             </div>
         </form>
