--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -27,8 +27,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-scroll amber-text text-lighten-1 prefix"></i>
-                    <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" required></textarea>
-                    <label for="recipe_description">Short Description Of A Recipe</label>
+                    <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" minlength="150" maxlength="500" data-length="500" required></textarea>
+                    <label for="recipe_description">Description Of A Recipe / Minimum 150 </label>
                 </div>
             </div>
             <div class="row">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 l10 center-align">
+                <div class="col s12 center-align">
                     <a href="{{ url_for('get_recipe') }}" class="btn-large waves-effect waves-light">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
