--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,56 +5,66 @@
         <div class="col s12 m8 offset-m2" method="POST" action="{{ url_for('profile', username=session['user'])}}">
             <div class="card-panel">
                 <h3>
-                    {{username.capitalize()}}'s Profile
+                    <i class="fas fa-user"></i>
+                    {{username.capitalize()}} Profile
                 </h3>
             </div>
         </div>
     </div>
-    <div>
-        <h4>Your recipes</h4>
-    </div>
-    {% for recipe in recipes %}
-    <div class="card horizontal">
-        <div class="row rm-bottom-gap valign-wrapper">
-            <div class="col m9 small-screen">
-                <div class="card-stacked">
-                    <div class="card-action">
-                        <div class="image-container small-screen center-align">
-                            <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}"><br />
+    <div class="row">
+        <div class="col s12">
+            <ul class="tabs">
+                <li class="tab col s4"><a class="active" href="#test1">Profile Overview</a></li>
+                <li class="tab col s4"><a href="#test2">Your Recipes</a></li>
+                <li class="tab col s4"><a href="#test4">Edit Your Profile</a></li>
+            </ul>
+        </div>
+        <div id="test1" class="col s12">
+            <h6>Your profile details</h6>
+            <p>username</p>
+            <p>current passwords</p>
+        </div>
+        <div id="test2" class="row rm-bottom-gap valign-wrapper">
+            <div>
+                <p>Placeholder for filter</p>
+            </div>
+            <!-- <div class="row rm-bottom-gap valign-wrapper"> -->
+            {% for recipe in recipes %}
+                <div class="col s6 m3">
+                    <div class="card small responsive-size-profile hoverable">
+                        <div class="card-image">
+                            <span class="delete-btn">
+                                <a href="#modal1" class="waves-effect waves-light btn-small red darken-1 modal-trigger "><i class="fas fa-times-circle"></i> Delete</a>
+                            </span>
+                            <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}">
                             {% if recipe.recipe_image not in recipe_images %}
-                                <p>Nera tokio paveiksliuko</p>
+                                <p>No Image Available</p>
                             {% endif %}
                         </div>
-                        <p class="left">
-                            <strong>{{recipe.recipe_name}}</strong>
-                        </p>
-                    </div>
-                    <div class="card-content short-desc">
-                        {{recipe.recipe_description}}
-                    </div>
-                    <div class="card-content card-footer">
-                        <i class="far fa-clock"></i>
-                        <strong>{{recipe.prep_time + recipe.cook_time}}</strong>&emsp;
-                        <i class="fas fa-utensil-spoon"></i>
-                        <strong>{{recipe.category_name}}</strong>&emsp;
-                        <i class="fas fa-user"></i>
-                        <em> by: {{recipe.recipe_by}}</em>
-                        <div class="recipe_edit_del_cont center-align">
-                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn-small ">Edit Recipe</a>
-                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn-small ">Delete Recipe</a>
+                        <div class="card-content center-align recipe_edit_del_cont">
+                            <span class="truncate left-align">{{recipe.recipe_name}}</span>
+                            <strong><p class="left-align">{{recipe.recipe_add_time}}</p></strong>
+                            <div class="edit-btn">
+                                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn-small"><i class="fas fa-edit"></i> Edit</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="image-container-medium col m3 small-screen center-align">
-                <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}" alt="{{recipe.recipe_image}}"><br />
-                {% if recipe.recipe_image not in recipe_images %}
-                    <p>Nera tokio paveiksliuko</p>
-                {% endif %}
-            </div>
+            {% endfor %}
+            <!-- </div> -->
         </div>
-    </div>  
-{% endfor %}
+        <div id="test4" class="col s12">Editing your profile</div>
+    </div>
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Yes</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">No</a>
+        </div>
+    </div>
 
 
 {% endblock %}
