--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -21,7 +21,9 @@
             <h2 class="left-align">Latest recipies</h2>
         </div>
         <div class="col s6 right-align">
-            <button>More Recipies</button>
+            <a href="{{ url_for('get_recipe') }}" class="btn-large waves-effect waves-light">
+                Show more <i class="fas fa-file right"></i>
+            </a>
         </div>
     </div>
     <div class="row">
@@ -52,29 +54,15 @@
             <h2 class="left-align"> Top Kitchen Gadgets</h2>
         </div>
         <div class="col s6 right-align">
-            <button>More Recipies</button>
+            <a href="{{ url_for('get_product_list') }}" class="btn-large waves-effect waves-light">
+                Show more <i class="fas fa-file right"></i>
+            </a>
         </div>
     </div>
-    <div class="row">
-            <div class="col s6 m3">
-                <div class="card small responsive-size hoverable">
-                    <div class="card-image">
-                        <img class="responsive-img" src="#">
-                    </div>
-                    <div class="card-content">
-                        <span class="truncate">tool name</span>
-                        <strong><p class="truncate">description</p></strong>
-                        <span>
-                            <i class="far fa-clock"></i>
-                            <strong>pricer</strong>&emsp;
-                        </span>
-                        <span>
-                            <i class="fas fa-user"></i>
-                            <em> where to buy</em>
-                        </span>
-                    </div>
-                </div>
-            </div>
+    <div class="carousel">
+        {% for item in kitchen_tools %}
+            <a class="carousel-item" href="{{ url_for('item_details', item_id=item._id)}}"><img src="{{ item.product_image }}">{{item.product_name}}</a>
+        {% endfor %}
     </div>
 
 {% endblock %}
